<resources>
    <string name="app_name">Marvel</string>
    <string name="characters">Characters</string>
    <string name="series">Series</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="character_avatar">character avatar</string>
    <string name="comic_picture">comic picture</string>
    <string name="name">Name</string>
    <string name="serie_picture">serie picture</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>

    <string name="favoriteCharacters">characters</string>
    <string name="favoriteComics">comics</string>
    <string name="favoriteSeries">series</string>
    <string name="cameraError">Camera error</string>
    <string name="cameraGranted">Camera granted</string>
    <string name="cameraNotGranted">Camera not granted</string>
</resources>