<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SerieDetailActivity">

    <TextView
        android:id="@+id/serieDetailTitle"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="@+id/serieDetailImage"
        app:layout_constraintStart_toStartOf="@+id/serieDetailImage"
        app:layout_constraintTop_toBottomOf="@+id/serieDetailImage" />

    <ImageView
        android:id="@+id/serieDetailImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/character_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/serieDetailDescription"
        android:layout_width="342dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:gravity="fill"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/serieDetailTitle"
        app:layout_constraintStart_toStartOf="@+id/serieDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/serieDetailTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serieDetailRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/serieDetailButtonSwitchList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/serieDetailButtonSwitchList"
        app:layout_constraintTop_toBottomOf="@+id/serieDetailButtonSwitchList"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/comic_item" />

    <Button
        android:id="@+id/serieDetailButtonSwitchList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/marvel_blue"
        android:text="@string/characters"
        android:textColor="@color/marvel_red"
        app:layout_constraintEnd_toEndOf="@+id/serieDetailDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/serieDetailDescription"
        app:layout_constraintTop_toBottomOf="@+id/serieDetailDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>