<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/characterDetailImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/character_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/characterDetailDescription"
                android:layout_width="342dp"
                android:layout_height="32dp"
                android:layout_marginTop="28dp"
                android:gravity="fill"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/characterDetailName"
                app:layout_constraintStart_toStartOf="@+id/characterDetailName"
                app:layout_constraintTop_toBottomOf="@+id/characterDetailName" />

            <TextView
                android:id="@+id/characterDetailName"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/characterDetailImage"
                app:layout_constraintStart_toStartOf="@+id/characterDetailImage"
                app:layout_constraintTop_toBottomOf="@+id/characterDetailImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>